--- a/style.css
+++ b/style.css
@@ -1,48 +1,88 @@
-* {
+/* * {
     box-sizing: border-box;
 }
 
 header, footer{
-    grid-column: 1/3;
+    grid-column: 1/5;
+} */
+
+header {
+    background-color: black;
+    height: 120px;
+    font-size: 90px;
+    font-family: 'EB Garamond';
+    color: white;
+    border: white;
+    border-bottom: 10px double white;
+
 }
 
-header{
-    background-color: rgb(183, 22, 22);
-    height: 80px;
-    font-size: 60px;
-    
-}
-
-body{
+body {
     margin: 0;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    display: grid;
-    min-height: 80vh;
-    display: grid;
+    height: 100vh;
+    /* display: grid;
+    min-height: 80vh; */
+    /* display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 50px 1fr 30px;
-    grid-gap: 5px;
-}
-
-.app-title{
+    grid-template-rows: 50px 1fr 30px; */
+    /* grid-gap: 5px; */
     display: flex;
     justify-content: center;
-    font-size: 50 px;
+    flex-direction: column;
 }
 
-.flex-ctr{
+.app-title {
+    display: flex;
+    justify-content: center;
+    font-size: 90 px;
+}
+
+main {
+    font-family: 'Bubbler One', sans-serif;
+    color: #f4eadb;
+    ;
+    background-color: black;
+    height: 90vh;
+
+}
+
+.subHead {
+    font-size: 60px;
+}
+
+p {
+    font-size: 40px;
+}
+
+/* .flex-ctr{
     background-color: dodgerblue;
+} */
+
+.getCocktailbtn {
+    background-color: black;
+    border: 4px solid white;
+    font-size: 50px;
+
 }
 
-footer{
+footer {
+    background: url("https://media.architecturaldigest.com/photos/5c6452972a81d22dc23c83f9/16:9/w_2991,h_1682,c_limit/Midnight%20Rambler-TX.jpg");
     background-color: red;
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    height: 100px;
+    height: 50vh;
+    width: 100vw;
 }
-.flex-footer{
+
+.flex-footer {
     display: flex;
     justify-content: center;
     align-items: flex-end;
+}
+
+img {
+    width: 300px;
+    height: 200 px;
 }
